/*
Copyright 2021 The Kubernetes Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

package api_metrics;
option go_package = "/api_metrics";

service Metrics {
    rpc AuditInc(stream AuditRequest) returns (EmptyResponse) {}
    rpc BpfInc(stream BpfRequest) returns (EmptyResponse) {}
}

message AuditRequest {
    message SeccompAuditReq {
        string syscall = 1;
    }
    message SelinuxAuditReq {
        string scontext = 1;
        string tcontext = 2;
    }
    string node = 1;
    string namespace = 2;
    string pod = 3;
    string container = 4;
    string executable = 5;
    SeccompAuditReq seccompReq = 6;
    SelinuxAuditReq selinuxReq = 7;
}

message BpfRequest {
    string node = 1;
    uint64 mount_namespace = 2;
    string profile = 3;
}

message EmptyResponse {}
